# riskyneuroarousal

./: .gitignore  Makefile  README.md  config.json  pyproject.toml  setup_env.sh
data/: 0test.ipynb  1fits.ipynb  2ddm.ipynb  3history.ipynb  behavioral_data.csv  behavioral_data_SVs.csv  behavioral_data_non_pupil.csv  behavioral_data_pupil.csv  hddm_pupil_data.csv
notebooks/exploratory/: 0-pupil.ipynb  1-behavior.ipynb  10-mistakes_exploring.ipynb  11-evolve_decision.ipynb  2-blinks.ipynb  2-glms.ipynb  3-ddms_data.ipynb  3-pupil_start.ipynb  4-ddm_fits.ipynb  4-pupil_response.ipynb  4-saccades.ipynb  5-saccades2.ipynb  7-extract_lossaversion.ipynb  8-expectedvaluemax.ipynb  random_plots.ipynb
notebooks/new/: 1-behavioral_models.ipynb  2-simulation_recovery.ipynb
results/: sub100_model1.csv  sub102_model1.csv  sub102_model1.pkl  sub103_model1.csv  sub104_model1.csv  sub105_model1.csv  sub105_model1.pkl  sub106_model1.csv  sub107_model1.csv  sub108_model1.csv  sub109_model1.csv  sub109_model1.pkl  sub10_model1.csv  sub10_model1.pkl  sub110_model1.csv  sub112_model1.csv  sub113_model1.csv  sub114_model1.csv  sub115_model1.csv  sub115_model1.pkl  sub116_model1.csv  sub117_model1.csv  sub118_model1.csv  sub118_model1.pkl  sub119_model1.csv  sub11_model1.csv  sub11_model1.pkl  sub120_model1.csv  sub121_model1.csv  sub123_model1.csv  sub123_model1.pkl  sub124_model1.csv  sub124_model1.pkl  sub13_model1.csv  sub14_model1.csv  sub14_model1.pkl  sub15_model1.csv  sub16_model1.csv  sub17_model1.csv  sub18_model1.csv  (+122 more)
src/: config.py
tests/: test_config.json  test_config.py
(+104 files in other folders)
